# WAVE-Simulation

./: .gitignore  .gitlab-ci.yml  AUTHORS  CITATION.cff  CONTRIBUTING.md  LICENSE  README.cmake  README.md  detectortypes.hpp  hilbert.cpp  hilbert.hpp
src/: .clang-format  CMakeLists.txt  Configuration.hpp  Derivatives.hpp  FDSimulation.cpp  InitializeMatrices.hpp  Makefile  Modelparameter.hpp  Receiver.hpp  Receivers.hpp  SOFI.cpp  SOFI.cpp.orig  SOFI2Dacoustic.cpp  SOFI2Delastic.cpp  SOFI2Dvisco.cpp  SOFI3Dacoustic.cpp  SOFI3Delastic.cpp  SOFI3Dvisco.cpp  SOFIConfig.cmake.in  Seismogram.hpp  Simulation.cpp  SimulationConfig.cmake.in  SourceFunction.hpp  Sources.hpp  Sourcesignal.hpp  Timesteps.hpp  WAVE-SimulationConfig.cmake.in  config.hpp.in  main.cpp
src/Acquisition/: Acquisition.hpp  AcquisitionGeometry.cpp  AcquisitionGeometry.hpp  AcquisitionGeometryUnitTest.cpp  AcquisitionSettings.hpp  AcquisitionUnitTest.cpp  Coordinates.cpp  Coordinates.hpp  CoordinatesUnitTest.cpp  Receivers.cpp  Receivers.hpp  RecieversUnitTest.cpp  Seismogram.cpp  Seismogram.hpp  SeismogramHandler.cpp  SeismogramHandler.hpp  Sources.cpp  Sources.hpp  Sourcesignal.hpp  segy.hpp  suHandler.cpp  suHandler.hpp
src/Acquisition/SourceSignal/: Berlage.cpp  Berlage.hpp  FGaussian.cpp  FGaussian.hpp  FGaussianUnitTest.cpp  IntgSinThree.cpp  IntgSinThree.hpp  IntgSinThreeUnitTest.cpp  Ricker.cpp  Ricker.hpp  RickerUnitTest.cpp  Ricker_GRTM.cpp  Sin.cpp  (+16 more)
src/AcquisitionEM/: Acquisition.hpp  AcquisitionGeometry.cpp  AcquisitionGeometry.hpp  Receivers.cpp  Receivers.hpp  Seismogram.cpp  Seismogram.hpp  SeismogramHandler.cpp  SeismogramHandler.hpp  Sources.cpp  Sources.hpp
src/CheckParameter/: CheckParameter.cpp  CheckParameter.hpp  CheckParameter.tpp
src/Common/: .Common.hpp.kate-swp  Common.hpp  Common.tpp  Hilbert.cpp  Hilbert.hpp  HilbertFFT.cpp  HilbertFIR.cpp  HostPrint.cpp  HostPrint.hpp  medianfilter.cpp  medianfilter.hpp
src/Configuration/: Configuration.cpp  Configuration.hpp  ConfigurationUnitTest.cpp  ValueType.hpp
src/Derivatives/: Derivatives.hpp  Derivatives3Dacoustic.hpp
src/Filter/: Filter.cpp  Filter.hpp
src/ForwardSolver/: Factory.cpp  Factory.hpp  ForwardSolver.cpp  ForwardSolver.hpp  ForwardSolver.hpp.orig  ForwardSolver2Dacoustic.cpp  ForwardSolver2Dacoustic.cpp.orig  ForwardSolver2Dacoustic.hpp  ForwardSolver2Dacoustic.hpp.orig  ForwardSolver2Delastic.cpp  ForwardSolver2Delastic.cpp.orig  ForwardSolver2Delastic.hpp  ForwardSolver2Delastic.hpp.orig  ForwardSolver2Dsh.cpp  ForwardSolver2Dsh.hpp  ForwardSolver2Dvisco.cpp  ForwardSolver2Dvisco.cpp.orig  ForwardSolver2Dvisco.hpp  ForwardSolver2Dvisco.hpp.orig  ForwardSolver2Dviscoelastic.cpp  ForwardSolver2Dviscoelastic.hpp  ForwardSolver2Dviscosh.cpp  ForwardSolver2Dviscosh.hpp  ForwardSolver3Dacoustic.cpp  ForwardSolver3Dacoustic.cpp.orig  ForwardSolver3Dacoustic.hpp  ForwardSolver3Dacoustic.hpp.orig  ForwardSolver3Delastic.cpp  ForwardSolver3Delastic.cpp.orig  ForwardSolver3Delastic.hpp  ForwardSolver3Delastic.hpp.orig  ForwardSolver3Dvisco.cpp  ForwardSolver3Dvisco.cpp.orig  ForwardSolver3Dvisco.hpp  ForwardSolver3Dvisco.hpp.orig  ForwardSolver3Dviscoelastic.cpp  ForwardSolver3Dviscoelastic.hpp  ForwardSolverFactory.cpp  ForwardSolverFactory.hpp  ForwardSolverSeismic.cpp  (+1 more)
src/ForwardSolverEM/: ForwardSolver.cpp  ForwardSolver.hpp  ForwardSolver2Demem.cpp  ForwardSolver2Demem.hpp  ForwardSolver2Dtmem.cpp  ForwardSolver2Dtmem.hpp  ForwardSolver2Dviscoemem.cpp  ForwardSolver2Dviscoemem.hpp  ForwardSolver2Dviscotmem.cpp  ForwardSolver2Dviscotmem.hpp  ForwardSolver3Demem.cpp  ForwardSolver3Demem.hpp  ForwardSolver3Dviscoemem.cpp  ForwardSolver3Dviscoemem.hpp  ForwardSolverEM.cpp  ForwardSolverEM.hpp  ForwardSolverFactory.cpp  ForwardSolverFactory.hpp
src/IO/: IO.hpp  SUIO.hpp
src/Modelparameter/: Acoustic.cpp  Acoustic.hpp  AcousticUnitTest.cpp  Elastic.cpp  Elastic.hpp  Factory.cpp  Factory.hpp  Modelparameter.cpp  Modelparameter.hpp  Modelparameter3Dacoustic.hpp  Modelparameter3Delastic.hpp  Modelparameter3Dvisco.hpp  ModelparameterFactory.cpp  ModelparameterFactory.hpp  ModelparameterSeismic.cpp  ModelparameterSeismic.hpp  SH.cpp  SH.hpp  ViscoSH.cpp  ViscoSH.hpp  Viscoelastic.cpp  Viscoelastic.hpp
src/ModelparameterEM/: EMEM.cpp  EMEM.hpp  Modelparameter.cpp  Modelparameter.hpp  ModelparameterEM.cpp  ModelparameterEM.hpp  ModelparameterFactory.cpp  ModelparameterFactory.hpp  TMEM.cpp  TMEM.hpp  ViscoEMEM.cpp  ViscoEMEM.hpp  ViscoTMEM.cpp  ViscoTMEM.hpp
src/PartitionedInOut/: PartitionedInOut.cpp  PartitionedInOut.hpp
src/Partitioning/: Partitioning.cpp  Partitioning.hpp  Partitioning3DCubes.hpp  PartitioningCubes.cpp  PartitioningCubes.hpp
src/SOFIexplicit/: SOFI2Dacoustic.cpp  SOFI2Delastic.cpp  SOFI2Dvisco.cpp  SOFI3Dacoustic.cpp  SOFI3Delastic.cpp  SOFI3Dvisco.cpp
src/Scripts/: formatSourceCode.sh
src/Tests/: Test_CompareSeismogram.cpp  Test_FD3DAcoustic.cpp  Test_SOFI3Dacoustic.cpp  Test_SOFI3Delastic.cpp  Test_SOFI3Dvisco.cpp
src/Wavefields/: Factory.cpp  Factory.hpp  Wavefields.cpp  Wavefields.hpp  Wavefields2Dacoustic.cpp  Wavefields2Dacoustic.hpp  Wavefields2Delastic.cpp  Wavefields2Delastic.hpp  Wavefields2Dsh.cpp  Wavefields2Dsh.hpp  Wavefields2Dvisco.cpp  Wavefields2Dvisco.hpp  Wavefields2Dviscoelastic.cpp  Wavefields2Dviscoelastic.hpp  Wavefields2Dviscosh.cpp  Wavefields2Dviscosh.hpp  Wavefields3Dacoustic.cpp  Wavefields3Dacoustic.hpp  Wavefields3Delastic.cpp  Wavefields3Delastic.hpp  Wavefields3Dvisco.cpp  Wavefields3Dvisco.hpp  Wavefields3Dviscoelastic.cpp  Wavefields3Dviscoelastic.hpp  WavefieldsFactory.cpp  WavefieldsFactory.hpp  WavefieldsSeismic.cpp  WavefieldsSeismic.hpp
src/WavefieldsEM/: Wavefields.cpp  Wavefields.hpp  Wavefields2Demem.cpp  Wavefields2Demem.hpp  Wavefields2Dtmem.cpp  Wavefields2Dtmem.hpp  Wavefields2Dviscoemem.cpp  Wavefields2Dviscoemem.hpp  Wavefields2Dviscotmem.cpp  Wavefields2Dviscotmem.hpp  Wavefields3Demem.cpp  Wavefields3Demem.hpp  Wavefields3Dviscoemem.cpp  Wavefields3Dviscoemem.hpp  WavefieldsEM.cpp  WavefieldsEM.hpp  WavefieldsFactory.cpp  WavefieldsFactory.hpp
(+303 files in other folders)
